--- a/index.html
+++ b/index.html
@@ -2,8 +2,53 @@
   <head>
     <title>Levenshtein Visualization</title>
     <style>
+      body {
+        margin: 0px;
+      }
+
+      .top {
+        text-align: center;
+        background-color: white;
+        width: 75%;
+        height: 112px;
+        margin: 0 auto;
+        border-radius: 2px;
+        box-shadow: 0 1px 7px black;
+        top: 15px;
+        position: relative;
+      }
+
+      .anim-container {
+        font-size: 1.75em;
+        text-align: center;
+        background-color: white;
+        width: 75%;
+        height: 112px;
+        margin: 20px auto;
+        border-radius: 2px;
+        box-shadow: 0 1px 7px black;
+        top: 15px;
+        position: relative;
+      }
+
+      input {
+        margin: 29px 50px;
+        padding: 3px;
+        border-radius: 2px;
+        border: 1px solid grey;
+      }
+
+      .container {
+        background-color: rgb(200, 200, 200);
+        width: 100%;
+        height: 100%;
+      }
+
+      .inputs {
+
+      }
       .letter {
-        width : 20px;
+        width : 25px;
         display: inline-block;
         text-align: center;
       }
