--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         position: relative;
       }
 
-      input {
+      .inputs input {
         margin: 29px 50px;
         padding: 3px;
         border-radius: 2px;
